update route New and add upload image
